--- a/src/RookieShop.Bff/wwwroot/index.html
+++ b/src/RookieShop.Bff/wwwroot/index.html
@@ -1,15 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>RookieShop BFF</title>
-    <link href="libs/dist/bootstrap.min.css" rel="stylesheet"/>
-    <link href="StyleSheet.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="libs/dist/bootstrap.min.css" rel="stylesheet" />
+    <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
 <div class="container">
     <header class="page-header">
-        <h1>Hello Rookie Shop BFF</h1>
+        <h1>Duende BFF Security Framework</h1>
     </header>
 
     <div class="row">
